# telegram-menu-builder

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  PERSONALIZATION.md  PROJECT_SUMMARY.md  PYPI_BEST_PRACTICES.md  PYPI_CONFIG.md  PYPI_PUBLISHING.md  PYPI_UPLOAD.md  README.md  SECURITY.md  TESTING_REPORT.md  TRUSTED_PUBLISHER_SETUP.md  mkdocs.yml  mypy.ini  pyproject.toml  pyrightconfig.json  setup_dev.py  upload_to_pypi.py
.claude/: settings.json
.claude/agents/: ptb-compat-checker.md  test-author.md  type-strictness-reviewer.md
.claude/skills/add-example/: SKILL.md
.claude/skills/add-storage-backend/: SKILL.md
.claude/skills/dependency-audit/: SKILL.md
.claude/skills/release/: SKILL.md
.claude/skills/ship/: SKILL.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  docs.yml  python-publish.yml  scorecard.yml
docs/: changelog.md  contributing.md  conversation_handler_guide.md  dependency-audit.md  development.md  faq.md  index.md  installation.md  python-compatibility.md  quickstart.md  security.md
docs/advanced/: custom-storage.md  encoding.md
docs/api/: builder.md  encoding.md  router.md  storage.md  testing.md  types.md
docs/guide/: menu-building.md  redis-storage.md  routing.md  sql-storage.md  static-menus.md  storage.md  testing.md
examples/: advanced_menu.py  conversation_handler_menu.py  simple_menu.py
src/telegram_menu_builder/: __init__.py  builder.py  encoding.py  py.typed  router.py  testing.py  types.py
src/telegram_menu_builder/storage/: __init__.py  base.py  memory.py  redis.py  sqlalchemy.py
tests/: conftest.py  test_builder.py  test_encoding.py  test_package.py  test_redis_storage.py  test_router.py  test_sql_storage.py  test_static_build.py  test_storage.py  test_testing.py  test_types.py
